// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity for recipes with components 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity for recipes without components 1`] = `
Object {
  "components": undefined,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity if an amount is set 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 2,
      "type": "Item",
      "usedQuantity": 2,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity if an recipe has a output > 0 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 5,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 5,
  "type": "Recipe",
  "usedQuantity": 5,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity if an recipe has a output > 0 2`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 5,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 5,
  "type": "Recipe",
  "usedQuantity": 5,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity if an recipe has a output > 0 3`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 25,
      "type": "Item",
      "usedQuantity": 25,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 5,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 25,
  "type": "Recipe",
  "usedQuantity": 25,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity if an sub-recipe has a output > 0 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 10,
      "quantity": 1,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 5,
      "quantity": 7,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 2,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`treeAdjustQuantity (total quantity) calculates the correct quantity if an sub-recipe has a output > 0 2`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 10,
      "quantity": 1,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 5,
      "quantity": 7,
      "totalQuantity": 15,
      "type": "Item",
      "usedQuantity": 15,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 2,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 4,
  "type": "Recipe",
  "usedQuantity": 4,
}
`;

exports[`treeAdjustQuantity (total quantity) does not modify the initial recipe tree 1`] = `
Object {
  "components": Array [
    Object {
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "type": "Item",
    },
    Object {
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "type": "Item",
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "type": "Recipe",
}
`;

exports[`treeAdjustQuantity (total quantity) does not modify the initial recipe tree 2`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (total quantity) rounds correctly if the output is percentage based 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 0.31,
      "quantity": 77,
      "totalQuantity": 77,
      "type": "Item",
      "usedQuantity": 77,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (total quantity) works with a complex real recipe 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 1,
          "min_rating": null,
          "output": 1,
          "quantity": 25,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
        },
        Object {
          "components": Array [
            Object {
              "components": undefined,
              "disciplines": Array [],
              "id": 1,
              "min_rating": null,
              "output": 1,
              "quantity": 3,
              "totalQuantity": 60,
              "type": "Item",
              "usedQuantity": 60,
            },
          ],
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 1,
          "min_rating": 400,
          "output": 1,
          "quantity": 10,
          "recipe_id": 123,
          "totalQuantity": 20,
          "type": "Recipe",
          "usedQuantity": 20,
        },
        Object {
          "components": Array [
            Object {
              "components": undefined,
              "disciplines": Array [],
              "id": 1,
              "min_rating": null,
              "output": 1,
              "quantity": 2,
              "totalQuantity": 16,
              "type": "Item",
              "usedQuantity": 16,
            },
          ],
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 1,
          "min_rating": 400,
          "output": 1,
          "quantity": 4,
          "recipe_id": 123,
          "totalQuantity": 8,
          "type": "Recipe",
          "usedQuantity": 8,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "output": 5,
      "quantity": 5,
      "recipe_id": 123,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 10,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`treeAdjustQuantity (total quantity) works with a simple real recipe 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "output": 1,
      "quantity": 25,
      "totalQuantity": 50,
      "type": "Item",
      "usedQuantity": 50,
    },
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 1,
          "min_rating": null,
          "output": 1,
          "quantity": 3,
          "totalQuantity": 60,
          "type": "Item",
          "usedQuantity": 60,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "output": 1,
      "quantity": 10,
      "recipe_id": 123,
      "totalQuantity": 20,
      "type": "Recipe",
      "usedQuantity": 20,
    },
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 1,
          "min_rating": null,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 16,
          "type": "Item",
          "usedQuantity": 16,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "output": 1,
      "quantity": 4,
      "recipe_id": 123,
      "totalQuantity": 8,
      "type": "Recipe",
      "usedQuantity": 8,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 5,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 10,
  "type": "Recipe",
  "usedQuantity": 10,
}
`;

exports[`treeAdjustQuantity (used quantity) always crafts the root node even if it is available 1`] = `
Object {
  "components": undefined,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (used quantity) does only craft part of the items if the tree result if partially available 1`] = `
Object {
  "components": Array [
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 2,
          "min_rating": null,
          "output": 1,
          "quantity": 1,
          "totalQuantity": 5,
          "type": "Item",
          "usedQuantity": 2,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 0,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 10,
  "type": "Recipe",
  "usedQuantity": 10,
}
`;

exports[`treeAdjustQuantity (used quantity) doesn't use tree components if the tree result is available or not crafted 1`] = `
Object {
  "buyPrice": 1,
  "buyPriceEach": 1,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": undefined,
      "craft": false,
      "decisionPrice": 1,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "decisionPrice": 1,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "output": 1,
          "quantity": 5,
          "totalQuantity": 0,
          "type": "Item",
          "usedQuantity": 0,
        },
      ],
      "craft": true,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 3,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "decisionPrice": 1,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "output": 1,
          "quantity": 5,
          "totalQuantity": 5,
          "type": "Item",
          "usedQuantity": 5,
        },
      ],
      "craft": false,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 6,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "decisionPrice": 1,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "output": 1,
          "quantity": 5,
          "totalQuantity": 5,
          "type": "Item",
          "usedQuantity": 0,
        },
      ],
      "craft": true,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 5,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
  ],
  "craft": true,
  "decisionPrice": 1,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (used quantity) doesn't use tree sub-components if the tree result is not crafted or available 1`] = `
Object {
  "buyPrice": 1,
  "buyPriceEach": 1,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": Array [
            Object {
              "buyPrice": 1,
              "buyPriceEach": 1,
              "components": undefined,
              "craft": false,
              "decisionPrice": 1,
              "disciplines": Array [],
              "id": 4,
              "min_rating": null,
              "output": 1,
              "quantity": 5,
              "totalQuantity": 25,
              "type": "Item",
              "usedQuantity": 25,
            },
          ],
          "craft": true,
          "decisionPrice": 1,
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 3,
          "min_rating": 400,
          "output": 1,
          "quantity": 5,
          "recipe_id": 123,
          "totalQuantity": 5,
          "type": "Recipe",
          "usedQuantity": 5,
        },
      ],
      "craft": false,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 2,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": Array [
            Object {
              "buyPrice": 1,
              "buyPriceEach": 1,
              "components": undefined,
              "craft": false,
              "decisionPrice": 1,
              "disciplines": Array [],
              "id": 4,
              "min_rating": null,
              "output": 1,
              "quantity": 5,
              "totalQuantity": 0,
              "type": "Item",
              "usedQuantity": 0,
            },
          ],
          "craft": true,
          "decisionPrice": 1,
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 3,
          "min_rating": 400,
          "output": 1,
          "quantity": 5,
          "recipe_id": 123,
          "totalQuantity": 0,
          "type": "Recipe",
          "usedQuantity": 0,
        },
      ],
      "craft": true,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 99,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": Array [
            Object {
              "buyPrice": 1,
              "buyPriceEach": 1,
              "components": undefined,
              "craft": false,
              "decisionPrice": 1,
              "disciplines": Array [],
              "id": 4,
              "min_rating": null,
              "output": 1,
              "quantity": 5,
              "totalQuantity": 25,
              "type": "Item",
              "usedQuantity": 5,
            },
          ],
          "craft": true,
          "decisionPrice": 1,
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 6,
          "min_rating": 400,
          "output": 1,
          "quantity": 5,
          "recipe_id": 123,
          "totalQuantity": 5,
          "type": "Recipe",
          "usedQuantity": 5,
        },
      ],
      "craft": true,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 5,
      "min_rating": 400,
      "output": 1,
      "quantity": 1,
      "recipe_id": 123,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
  ],
  "craft": true,
  "decisionPrice": 1,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (used quantity) sets correct used quantity with available items 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 0,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 3,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 0,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`treeAdjustQuantity (used quantity) sets correct used quantity without available items 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "output": 1,
  "quantity": 1,
  "recipe_id": 123,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;
